lab-laravel-dusk

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -5,13 +5,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="{{site.baseurl}}/assets/css/rapport.css">
-        <title> Rapport </title>
+        <title> Rapport lab laravel dusk </title>
 
     </head>
     <body>
         <div id="page-wrapper" class="page-wrapper">
             <div class="book">
                 <article size="A4">
+                    <h1>Lab laravel dusk</h1>
                     {{ content }}
                 </article>
             </div>
